<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/facility_request_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_client_name" />

    <TextView
        android:id="@+id/facility_request_customer_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_client_contact_number" />

    <TextView
        android:id="@+id/facility_request_customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_client_email" />

    <TextView
        android:id="@+id/facility_request_chosen_service_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_chosen_service_name" />

    <TextView
        android:id="@+id/facility_request_chosen_service_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_chosen_service_category" />

    <TextView
        android:id="@+id/facility_request_chosen_service_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_chosen_service_frequency" />

    <TextView
        android:id="@+id/facility_request_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_start_date" />

    <TextView
        android:id="@+id/facility_request_service_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_service_price" />

    <TextView
        android:id="@+id/facility_request_service_discounted_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_service_discounted_price" />

    <TextView
        android:id="@+id/facility_request_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="7"
        android:padding="@dimen/padding_mini"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/facility_request_date_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_date_created" />

    <TextView
        android:id="@+id/facility_request_time_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_mini"
        tools:text="@string/requesting_time_created" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_facility_accept_customer_request"
        android:layout_width="@dimen/button_width_xxl"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_mini"
        android:text="@string/btn_accept_customer_request"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_facility_reject_customer_request"
        android:layout_width="@dimen/button_width_xxl"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_mini"
        android:text="@string/btn_reject_customer_request"
        android:textColor="@color/red"
        />


</LinearLayout>