<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_mini"
    app:cardCornerRadius="@dimen/margin_midi"
    app:cardElevation="@dimen/padding_mini">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_midi">

        <TextView
            android:id="@+id/facility_generated_invoice_facility_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_midi"
            android:padding="@dimen/padding_mini"
            android:text="@string/facility_generated_invoice_facility_details_title"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/facility_generated_invoice_facility_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facility_generated_invoice_facility_details_title"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_name" />

        <TextView
            android:id="@+id/facility_generated_invoice_facility_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_facility_name"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_physical_address" />

        <TextView
            android:id="@+id/facility_generated_invoice_facility_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_facility_address"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_contact_number" />

        <TextView
            android:id="@+id/facility_generated_invoice_facility_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_facility_phone_number"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_email" />

        <TextView
            android:id="@+id/facility_generated_invoice_customer_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_facility_email"
            android:layout_margin="@dimen/padding_midi"
            android:padding="@dimen/padding_mini"
            android:text="@string/facility_generated_invoice_customer_details_title"
            android:textAlignment="center"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/facility_generated_invoice_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_customer_details_title"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_customer_name" />

        <TextView
            android:id="@+id/facility_generated_invoice_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_customer_name"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_customer_contact_number" />

        <TextView
            android:id="@+id/facility_generated_invoice_customer_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_customer_phone"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_customer_email_address" />


        <TextView
            android:id="@+id/facility_generated_invoice_request_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_customer_email"
            android:layout_margin="@dimen/padding_midi"
            android:padding="@dimen/padding_mini"
            android:text="@string/facility_generated_invoice_request_details_title"
            android:textAlignment="center"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/facility_generated_invoice_request_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_request_details_title"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_service_name" />

        <TextView
            android:id="@+id/facility_generated_invoice_request_service_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_request_service_name"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_service_frequency" />

        <TextView
            android:id="@+id/facility_generated_invoice_request_service_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_request_service_frequency"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_service_price" />

        <TextView
            android:id="@+id/facility_generated_invoice_request_service_discounted_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_request_service_price"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_service_discounted_price" />


        <TextView
            android:id="@+id/facility_generated_invoice_request_service_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facility_generated_invoice_request_service_discounted_price"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding_mini"
            android:textColor="@color/black"
            android:textSize="@dimen/text_l"
            android:textStyle="bold"
            tools:text="@string/facility_generate_request_invoice_service_total_price" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facility_generated_invoice_confirm_button"
            android:layout_width="@dimen/button_width_xxl"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facility_generated_invoice_request_service_total_price"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_midi"
            android:text="@string/facility_generated_invoice_confirm_button"
            app:backgroundTint="@color/custom_client_accent_color" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>