<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_mini"
    app:cardCornerRadius="@dimen/padding_mini"
    app:cardElevation="@dimen/padding_mini">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_mini"
        android:orientation="vertical"
        android:padding="@dimen/padding_mini">

        <TextView
            android:id="@+id/txt_client_booking_response_detail_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_name" />

        <TextView
            android:id="@+id/txt_client_booking_response_detail_company_physical_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_physical_address" />

        <TextView
            android:id="@+id/txt_client_booking_response_detail_company_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_email" />

        <TextView
            android:id="@+id/txt_client_booking_response_detail_company_contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:text="@string/facility_generate_request_invoice_company_contact_number" />

        <TextView
            android:id="@+id/txt_client_booking_result_detail_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:lines="3"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txt_client_booking_response_detail_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:text="@string/txt_client_booking_response_detail_date_created" />

        <TextView
            android:id="@+id/txt_client_booking_response_detail_time_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_mini"
            tools:text="@string/txt_client_booking_response_detail_time_created" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_client_booking_response_detail_okay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/margin_mini"
            app:elevation="@dimen/margin_mini"
            android:layout_margin="@dimen/margin_midi"
            android:text="@string/btn_client_booking_response_detail_okay"
            app:backgroundTint="@color/custom_client_accent_color" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>