<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_mini">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/client_make_payment_wallet_balance"
        android:text="@string/client_make_payment_wallet_balance"
        android:textStyle="bold"
        android:padding="@dimen/padding_mini"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/client_make_payment_text"
        android:text="@string/client_make_payment_text"
        android:textAlignment="center"
        android:padding="@dimen/padding_mini"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:padding="@dimen/padding_mini">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facility_cancel_update_profile"
            android:id="@+id/btn_client_cancel_payment"
            app:cornerRadius="@dimen/margin_mini"
            android:layout_margin="@dimen/margin_mini"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fund_wallet_proceed"
            android:id="@+id/btn_client_make_payment"
            app:cornerRadius="@dimen/margin_mini"
            android:layout_margin="@dimen/margin_mini"/>

    </LinearLayout>

</LinearLayout>