<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding_mini"
    android:orientation="vertical">

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:text="@string/service_type"-->
<!--        android:id="@+id/tv_service_type"-->
<!--        android:padding="@dimen/padding_mini"/>-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:text="@string/service_specialist_name"-->
<!--        android:id="@+id/tv_service_specialist_name"-->
<!--        android:padding="@dimen/padding_mini"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/service_name"
        android:id="@+id/tv_service_name"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"/>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:text="@string/service_details"-->
<!--        android:id="@+id/tv_service_details"-->
<!--        android:layout_margin="@dimen/padding_mini"-->
<!--        android:padding="@dimen/padding_mini"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/service_price"
        android:id="@+id/tv_service_price"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/service_discount_price"
        android:id="@+id/tv_service_discount_price"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/available_places"
        android:id="@+id/tv_available_places"
        android:padding="@dimen/padding_mini"
        android:layout_margin="@dimen/padding_mini"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_service_start_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_mini"
        android:padding="@dimen/padding_mini"
        android:hint="@string/service_start_date"
        android:textColorHint="@color/custom_client_accent_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/service_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/service_start_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:labelFor="@id/service_start_date" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/request_text"
        android:id="@+id/tv_request_text"
        android:padding="@dimen/padding_mini"
        android:layout_margin="@dimen/padding_mini"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/button_width_xxl"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_mini"
        android:padding="@dimen/padding_mini"
        app:backgroundTint="@color/custom_client_accent_color"
        android:textColor="@color/white"
        android:text="@string/submit_request"
        android:id="@+id/submit_request"
        app:cornerRadius="@dimen/margin_mini"/>


</LinearLayout>